<resources>
    <string name="app_name">仟询</string>
    <string name="menu_01">仟言万语</string>
    <string name="menu_02">仟职百态</string>
    <string name="menu_03">仟锤百炼</string>
    <string name="menu_settings">设置</string>
    <string name="menu_help">帮助</string>
    <string name="main_sub">订阅</string>

    <string name="help_about">
        仟询平台是搭建优质企业用人与优秀学生就业的一站式免费服务平台，提供企业与学生的个性化定制与储备。通过平台使学生从大一开始通过平台和企业资深人士、专家接触 ，与社会技术发展接轨，让企业招之即用， 不仅解决企业急聘人才之需，还可以在学生中筛选出优秀人才定向化培养，储备企业人力资源库，解决长期用人需求。
        仟询平台符合中国教育部关于大学生就业精准帮扶的政策。两年来，仟询人走访了多个国家，成功的将德国双元制教学和中国的教育模式相结合。让企业在大学即可获得理论和实践相结合的应用型人才。
        目前该平台链接的高校、企业众多，获得政府及相关部门的大力支持。
        仟询，期待与您牵手！
    </string>

    <string name="help_user_helper">
        仟询用户注册使用协议及隐私政策

在此特别提示您在注册仟询服务之前，请务必阅读本《仟询用户注册使用协议及隐私政策》（以下简称“协议”）。在您阅读本协议之后，请您首先与我们签署本协议，然后您才能使用服务。除非您接受本协议所有条款，否则您无权注册、登录或使用服务。您对我们服务的注册、登录、使用等行为将视为您与我们签署本协议并同意接受本协议各项条款的约束。本协议由仟询随时更新，更新后的协议条款一旦公布即代替原来的协议条款，恕不再另行通知，用户可在本APP中查阅最新版协议条款。在修改协议条款后，如果用户不接受修改后的条款，请立即停止使用仟询提供的服务，用户继续使用我们提供的服务将被视为接受修改后的协议。

一、账户注册

1、用户在使用本服务前需要注册一个“仟询”账户。账户应当使用手机号码绑定注册，请用户使用尚未与“仟询”账户绑定的手机号码，以及未被仟询根据本协议封禁的手机号码注册账户。我们可以根据用户需求或产品需要对账号注册和绑定的方式进行变更，而无须事先通知用户。

2、用户注册时，我们需要您提供某些个人信息以便我们可以在必要时联系您，为您提供服务或者更好的使用体验，或者按照本协议将其用于其他方面。我们可能请您提供的“注册信息”包括但不限于：您的姓名、性别、年龄、学校情况、工作情况、兴趣爱好、个人说明、个人头像等。

3、如果您使用虚假信息完成账户注册，或者如果账户信息（包括个人说明的照片或文字）包含有非法或恶意的内容，我们可能会要求您限期修改、暂停您的账户或关闭您的帐号。

二、用户个人隐私信息保护

1、如果仟询发现或收到他人举报或投诉用户违反本协议约定的，我们有权不经通知随时对相关内容，包括但不限于用户资料、用户记录进行审查、删除，并视情节轻重对违规账号处以包括但不限于警告、账号封禁 、设备封禁 、功能封禁 的处罚，且通知用户处理结果。



2、因违反用户协议被封禁的用户，可以自行与仟询联系。其中，被实施功能封禁的用户会在封禁期届满后自动恢复被封禁功能。被封禁用户可提交申诉，我们将对申诉进行审查，并自行合理判断决定是否变更处罚措施。



3、仟询有权依合理判断对违反有关法律法规或本协议规定的行为进行处罚，对违法违规的任何用户采取适当的法律行动，并依据法律法规保存有关信息向有关部门报告等，用户应承担由此而产生的一切法律责任。

4、我们将采取合理措施，努力保护用户，防止在使用本服务中的用户个人隐私信息泄露、毁损或丢失。如我们获知您的个人信息被不当使用或展示，将及时采取补救措施。

5、用户停止使用本服务或本协议终止后，我们可以从服务器上永久地删除您上传的数据和信息；我们没有义务保留或向您提供这些数据和信息，也没有义务向用户返还任何数据。即便您主动删除了个人帐户内的个人信息或关闭了个人账户，我们仍可能继续显示那些被其他用户分享或发布过的您的个人信息，并且我们仍可以为了记录、存档、安全的目的或按照法律法规的强制性要求，在后台保留有关数据和信息的副本。

三、用户使用内容规范

1、本条所述内容是指用户使用仟询的过程中所制作、上载、复制、发布、传播的任何内容，包括但不限于账号头像、名称、用户说明等注册信息及认证资料，或文字、语音、图片、视频、图文等发送、回复或自动回复消息和相关链接页面，以及其他使用账号或本服务所产生的内容。



2、用户不得利用仟询账号或本服务制作、上载、复制、发布、传播如下法律、法规和政策禁止的内容：



(1) 反对宪法所确定的基本原则的；



(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；



(3) 损害国家荣誉和利益的；



(4) 煽动民族仇恨、民族歧视，破坏民族团结的；



(5) 破坏国家宗教政策，宣扬邪教和封建迷信的；



(6) 散布谣言，扰乱社会秩序，破坏社会稳定的；



(7) 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；



(8) 侮辱或者诽谤他人，侵害他人合法权益的；



(9) 含有法律、行政法规禁止的其他内容的信息。



3、用户不得利用仟询账号或本服务制作、上载、复制、发布、传播如下干扰仟询正常运营，以及侵犯其他用户或第三方合法权益的内容：



(1) 含有任何性或性暗示的；



(2) 含有辱骂、恐吓、威胁内容的；



(3) 含有骚扰、垃圾广告、恶意信息、诱骗信息的；



(4) 涉及他人隐私、个人信息或资料的；



(5) 侵害他人名誉权、肖像权、知识产权、商业秘密等合法权利的；



(6) 含有其他干扰本服务正常运营和侵犯其他用户或第三方合法权益内容的信息。

四、使用规则

1、您同意，在使用服务时，您将：

(1)遵守所有适用的法律和政策法规，包括但不限于：隐私权、知识产权、反垃圾邮件等方面的法律法规以及政府的监管要求；

(2)向我们提供准确的信息，并及时更新；

(3)在您的个人说明中使用您的真实姓名；

(4)以专业方式使用服务

(5)遵守我们的社区指引

2、您不得利用“仟询”账户或本服务进行如下行为：

(1) 提交、发布虚假信息，或盗用他人头像或资料，冒充、利用他人名义的；

(2) 强制、诱导其他用户关注、点击链接页面或分享信息的；

(3) 虚构事实、隐瞒真相以误导、欺骗他人的；

(4) 利用技术手段批量建立虚假账户的；

(5) 利用“仟询”账户或本服务从事任何违法犯罪活动的；

(6) 制作、发布与以上行为相关的方法、工具，或对此类方法、工具进行运营或传播，无论这些行为是否为商业目的；

(7) 其他违反法律法规规定、侵犯其他用户合法权益、干扰“仟询”正常运营或我们未明示授权的行为。

3、您须对使用“仟询”账户或本服务传送信息的真实性、合法性、无害性、准确性、有效性等全权负责。与您所传播的信息相关全部法律责任将由您自行承担，与我们无关。

4、我们提供的服务中可能包括广告。您同意在使用服务过程中显示广告。对于广告的内容，我们不负责任。除法律法规有明确规定之外，您应自行对依该广告信息进行的交易负责；对您因依该广告信息进行的交易或前述广告商提供的内容而遭受的损失或损害，我们不承担任何责任。

5、我们的服务还可能允许您访问第三方服务。我们不保证通过我们的服务提供、供应或链接的任何第三方服务的质量、可靠性或适当性，且我们不对此类第三方服务负有任何责任。如您通过我们的服务访问了第三方服务，您必须遵守该第三方服务适用的任何条款和条件。

五、不可抗力及其他免责事由

1、您理解并确认，在使用本服务的过程中，可能会遇到不可抗力等风险因素，使本服务发生中断。不可抗力是指不能预见、不能克服并不能避免且对一方或双方造成重大影响的客观事件，包括但不限于自然灾害如洪水、地震、瘟疫流行和风暴等以及社会事件如战争、动乱、政府行为等。出现上述情况时，我们将根据合理判断，努力在第一时间与相关单位配合，及时进行修复，但是由此给您或第三方造成的损失，我们及合作单位在法律允许的最大范围内免责。

2、在法律允许的限度内，我们及我们的关联方(A)对一切默示保证和声明（例如：关于适销性、适合于某特定目的、数据的准确性及不侵权的保证和声明），概不承担责任；(B)不保证服务的运行不发生间断或没有错误，且(C)按“原状”提供服务（包括但不限于内容和信息）。除法律另有不得免责的规定以外，我们不在以下情形中承担任何与服务有关的损失：

(a)各种安全问题对服务的侵扰，如他人利用用户的资料，造成现实生活中的骚扰；用户下载安装的其它软件或访问的其他网站中含有“特洛伊木马”等病毒，威胁到用户的计算机信息和数据的安全，继而可能影响本服务的正常使用等等。

(b)因不可抗力、计算机病毒或黑客攻击、系统不稳定、用户所在位置、用户关机以及其他任何技术、互联网络、通信线路原因等造成的服务中断或不能满足用户要求；

(c)服务中可能显示的误导性的、欺骗性的、威胁性的、诽谤性的、令人反感的或非法的信息，或侵犯他人权利的匿名或冒名的信息；

(d)因我们定期或不定期地对“仟询”平台或相关的设备进行检修或者维护造成的服务中断。

3、您理解并确认，在适用法律法规允许的最大限度内，对于我们向您提供的任何产品或者服务的质量缺陷及其引发的任何损失，我们无须承担任何责任。

六、其他

1、我们郑重提醒用户注意本协议中免除仟询责任和限制用户权利的条款，请用户仔细阅读，自主考虑风险。未成年人应在法定监护人的陪同下阅读本协议。



2、本协议的效力、解释及纠纷的解决，适用于中华人民共和国法律。若用户和仟询之间发生任何纠纷或争议，首先应友好协商解决，协商不成的，用户同意将纠纷或争议提交仟询住所地有管辖权的人民法院管辖。



3、本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。


    </string>

</resources>
