<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:background="@color/menu_background_color">
    <LinearLayout
        android:id="@+id/ll_menu_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@drawable/menu_background"
        android:padding="10dp">
        <ImageView
            android:id="@+id/iv_menu_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_head_image_shape"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:id="@+id/txt_menu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingBottom="5dp"
            android:text="Karl"
            android:textSize="@dimen/menu_text"
            android:textColor="@color/menu_text_color"/>
        <TextView
            android:id="@+id/txt_menu_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="一句话签名"
            android:textSize="@dimen/menu_text_02"
            android:textColor="@color/menu_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_menu_science"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/menu_text_style"
            android:text="@string/menu_01"/>
        <TextView
            android:id="@+id/txt_menu_recruit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/menu_text_style"
            android:text="@string/menu_02"/>
        <TextView
            android:id="@+id/txt_menu_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/menu_text_style"
            android:text="@string/menu_03"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_menu_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/menu_text_style"
                android:text="@string/menu_settings" />
            <TextView
                android:id="@+id/txt_menu_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/menu_text_style"
                android:text="@string/menu_help"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>