<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:background="@color/menu_background_color">
    <LinearLayout
        android:id="@+id/menu_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:padding="10dp">
        <ImageView
            android:id="@+id/menu_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:id="@+id/menu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Karl"
            android:textSize="@dimen/menu_text"
            android:textColor="@color/menu_text_color"/>
        <TextView
            android:id="@+id/menu_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="一句话签名"
            android:textSize="16sp"
            android:textColor="@color/menu_text_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/menu_science"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/menu_text"
            android:text="@string/menu_01"/>
        <TextView
            android:id="@+id/menu_recruit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/menu_text"
            android:textColor="@color/menu_text_color"
            android:text="@string/menu_02"/>
        <TextView
            android:id="@+id/menu_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/menu_text_color"
            android:textSize="@dimen/menu_text"
            android:text="@string/menu_03"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:id="@+id/menu_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_settings"
                android:textSize="@dimen/menu_text"
                android:textColor="@color/menu_text_color"/>
            <TextView
                android:id="@+id/menu_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_help"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/menu_text"
                android:textColor="@color/menu_text_color"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>